--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
 COPY ./package*.json ./
-RUN npm ci
+RUN npm install
 COPY . .
 ENV NODE_OPTIONS=--openssl-legacy-provider
 RUN npm run build 
