--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
 FROM node:18-alpine AS builder
 WORKDIR /app
-COPY ./package*.json ./
+COPY ./client/package*.json ./
 RUN npm install
-COPY . .
+COPY ./client .
 ENV NODE_OPTIONS=--openssl-legacy-provider
 RUN npm run build 
 
