--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,15 +3,24 @@ on:
   push:
     branches: [ "main" ]
 jobs:
-  publish_image:
+  Build and publish images:
     runs-on: ubuntu-latest
     steps:
       - name: checkout 
         uses: actions/checkout@v3    
+      - name: Login to Docker
+        run : docker login -u pooja175shah -p ${{ secrets.DOCKER_TOKEN }} 
       - name: build client app
         run: | 
          docker build -t pooja175shah/webapp-client-githubaction -f client/Dockerfile .
       - name: push image
         run: |
+          docker push pooja175shah/webapp-client-githubaction
+      - name: build server app 
+        run: | 
+         docker build -t pooja175shah/webapp-server-githubaction -f server/Dockerfile .
+      - name: push image
+        run: |
           docker login -u pooja175shah -p ${{ secrets.DOCKER_TOKEN }} 
           docker push pooja175shah/webapp-client-githubaction
+        
