--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18-alpine
 WORKDIR /app
-COPY ./package.json ./
+COPY server/package*.json ./
 RUN npm install
-COPY . .
+COPY server/ .
 CMD [ "npm", "run", "start" ] 
