--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ "main" ]
 jobs:
-  Build and publish images:
+  Build_publish_images:
     runs-on: ubuntu-latest
     steps:
       - name: checkout 
